--- a/Dia 2/barjava.html
+++ b/Dia 2/barjava.html
@@ -9,7 +9,7 @@
     </header>
     
     <nav>
-        <a href="index.html">Voltar ao Portfólio</a>
+        <a href="../index.html">Voltar ao Portfólio</a>
     </nav>
     
     <section>
