--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <nav>
         <ul>
             <li><a href="./Dia 2/barjava.html">Bar Java - Menu</a></li>
-            <li><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank">LinkedIn</a></li>
         </ul>
     </nav>
-    
-    <section>
+        <section>
         <h2>Sobre Mim</h2>
         <p>Sou estudante da Fatec, trabalho com tecnologia e adoro desafios.</p>
     </section>
