Dia 3 att sobre tabelas

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     
     <nav>
         <ul>
-            <li><a href="./Dia 2/barjava.html">Bar Java - Menu</a></li>
+            <li><a href="./Dia 1 & 2/barjava.html">Bar Java - Menu</a></li>
+            <li><a href="./Dia 3/empresa.html">Bar Java - Menu</a></li>
             <li><a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank">LinkedIn</a></li>
         </ul>
     </nav>
         <section>
         <h2>Sobre Mim</h2>
-        <p>Sou estudante da Fatec, trabalho com tecnologia e adoro desafios.</p>
+        <p>Sou estudante de ADS na Fatec de Jundiaí, tenho experiência com TI trabalhando com suporte ao usuário nv2, consultorias, configurações de máquinas e rede, instalaçõa de domínio. As skills em programção começaram no excel, atualemente tenho atuação em protejetos envolvendo Angular, SQL, C# e C e adoro desafios.</p>
     </section>
     
     <footer>
