--- a/Dia 1 & 2/barjava.html
+++ b/Dia 1 & 2/barjava.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <h1>Bar Java</h1>
-        <img src="../../java 2.avif" alt="Logo" height="20%" width="20%">
+        <img src="../java 2.avif" alt="Logo" height="20%" width="20%">
     </header>
     
     <nav>
