--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <header>
         <h1>Meu Portfólio</h1>
-        <img src="../astronaut-space-4k-wallpaper-uhdpaper.com-678@0@j.jpg" height="20%" width="20%">
+        <img src="astronaut-space-4k-wallpaper-uhdpaper.com-678@0@j.jpg" height="20%" width="20%">
     </header>
     
     <nav>
