--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             Comecei a ter contato com Programação através de criação de Macros em Excel via VBA para atender algumas necessidades. </br>
         
         </br>
-            Tenho participado de projetos desenvolvendo afinidades com:</br>
+            Tenho participado de projetos desenvolvendo habilidades com:</br>
 
             <li>Angular</li>
             <li>API Rest com Asp.Net</li>
