upgrades com tabelas

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     </header>
     
     <nav>
-        <ul>
+        <ol>
             <li><a href="./Dia 1 & 2/barjava.html">Bar Java - Menu</a></li>
-            <li><a href="./Dia 3 & 4/empresa.html">Site BF</a></li>
-            <li><a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank">LinkedIn</a></li>
+            <li><a href="./Dia 3 & 4/empresa.html">Site Battlefield</a></li>           
+        </ol>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank">Meu LinkedIn</a></li>
         </ul>
     </nav>
         <section>
