--- a/Dia 1 & 2/barjava.html
+++ b/Dia 1 & 2/barjava.html
@@ -17,10 +17,10 @@
     <main>     
         <h2 align="center">Cardápio</h2>
 
-            <table border="1" width="100%">
-                <th align="left"> <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bebidas</h3></th>
-                <th align="left"> <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Entradas</h3></th>
-                <th align="left"> <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sobremesas</h3></th>
+            <table border="1"  width="100%" style="padding: 10px;">
+                <th align="left"> <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BEBIDAS</h3></th>
+                <th align="left"> <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ENTRADAS</h3></th>
+                <th align="left"> <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SOBREMESAS</h3></th>
                 <tr>
                     <td valign="top">                       
                         <ul style="list-style-type: square;">
@@ -99,7 +99,7 @@
   
     <section>
         <h2>Horário de Funcionamento</h2>
-        <table border="5">
+        <table width="80%" border="5" align="center" cellspacing="1">
             <thead>
             <tr>
                 <th>horarios</th>
@@ -113,7 +113,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr align="center">
                 <td>MANHÃ</td>
                 <td>08:00 - 12:00</td>
                 <td>FECHADO</td>
@@ -123,7 +123,7 @@
                 <td>08:00 - 12:00</td>
                 <td rowspan="2">08:00 - 20:00</td>
             </tr>
-            <tr>
+            <tr align="center">
                 <td>TARDE</td>
                 <td>14:00 - 18:00</td>
                 <td>FECHADO</td>
@@ -174,9 +174,8 @@
         </thead>
         <tbody>
             <tr>
-
                 <td>Sexo:</td>
-                <td>
+                <td align="center">
                     
                     <input type="radio" name="sexo" value="Feminino" id="feminino">
                     <label for="feminino">Feminino</label>
