correções de nomes

--- a/Dia 5/podcast.html
+++ b/Dia 5/podcast.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DeNilo - Podcast</title>
-
-    <!-- feito por: DANILO SENA DS SANTOS & NICOLLAS RICHARD DELUCA MAIA -->
   </head>
   <body
     style="background-color: #505050; color: whitesmoke; font-family: 'Ravie'"
@@ -95,6 +93,10 @@
       <tr>
         <td style="background-color: #070c31" align="center">
           <p>© 2025 DeNilo Podcast - thanks for watching</p>
+          <span
+            >Desenvolvedores: Danilo Sena dos Santos & Nicollas Richard Deluca
+            Maia</span
+          >
         </td>
       </tr>
     </table>
