--- a/Dia 3 & 4/empresa.html
+++ b/Dia 3 & 4/empresa.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <table style="background-color: aqua" width="100%">
+    <table style="background-color: rgb(72, 224, 224)" width="100%">
       <thead>
         <tr>
           <th align="center"><h1>Battlefield</h1></th>
@@ -15,34 +15,29 @@
       </thead>
     </table>
 
-    <table border="4">
-      <tr>
-        <ul>
-          <li><a href="../index.html">voltar ao portifólio</a></li>
-          <li>
-            <a
-              href="https://www.ea.com/pt-br/games/battlefield/battlefield-3"
-              target="_blank"
-              >Jogos</a
-            >
-          </li>
-          <li>
-            <a href="https://www.ea.com/pt-br/news" target="_blank">Notícias</a>
-          </li>
-          <li>
-            <a href="https://steamcommunity.com/app/1238820" target="_blank"
-              >Comunidade</a
-            >
-          </li>
-        </ul>
-      </tr>
+    <table border="1" width="100%">
+      <thead>
+        <th><a href="../index.html">voltar ao portifólio</a></th>
+        <th>
+          <a href="https://www.ea.com/pt-br/games/battlefield/battlefield-3"
+            >Jogos</a
+          >
+        </th>
+        <th>
+          <a href="https://www.ea.com/pt-br/news">Notícias</a>
+        </th>
+        <th>
+          <a href="https://steamcommunity.com/app/1238820">Comunidade</a>
+        </th>
+      </thead>
+
+      <td colspan="4">
+        <img src="../bf3.jpg" height="30%" width="100%" />
+        <h2>Bem-vindo ao Battlefield 3</h2>
+      </td>
     </table>
 
-    <div>
-      <h1>Bem-vindo ao Battlefield 3</h1>
-    </div>
-
-    <div>
+    <section>
       <h2>Sobre o Jogo</h2>
       <p>
         Battlefield 3 é FPS e que da um coro em qualquer jogo atual. Possui bons
@@ -64,9 +59,9 @@
         épicas. Conecte-se com amigos e experimente a emoção do campo de
         batalha!
       </p>
-    </div>
+    </section>
 
-    <div>
+    <section>
       <h3>Requisitos de Sistema</h3>
 
       <h4>Requisitos mínimos para Windows</h4>
@@ -109,7 +104,7 @@
           <td>GeForce GTX 560</td>
         </tbody>
       </table>
-    </div>
+    </section>
 
     <footer>
       <p>&copy; 2025₢ Battlefield.</p>
