Pastas re-organizadas

--- a/battlefield-table/index.html
+++ b/battlefield-table/index.html
@@ -32,7 +32,7 @@
       </thead>
 
       <td colspan="4">
-        <img src="../bf3.jpg" height="30%" width="100%" />
+        <img src="./assets/bf3.jpg" height="30%" width="100%" />
         <h2>Bem-vindo ao Battlefield 3</h2>
       </td>
     </table>
