--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 <body>
     <header>
         <h1>Meu Portfólio</h1>
-        <img src="astronaut-space-4k-wallpaper-uhdpaper.com-678@0@j.jpg" height="20%" width="20%">
+        <img src="assets/astronaut-space-4k-wallpaper-uhdpaper.com-678@0@j.jpg" height="20%" width="20%">
     </header>
     
     <nav>
         <ol>
-            <li><a href="./Dia 1 & 2/barjava.html">Bar Java - Cafeteria</a></li>
-            <li><a href="./Dia 3 & 4/empresa.html">Site Battlefield</a></li>  
-            <li><a href="./Dia 5/podcast.html">PodCast - DeNilo</a></li>     
+            <li><a href="./cafeteria/index.html">Bar Java - Cafeteria</a></li>
+            <li><a href="./battlefield-table/index.html">Site Battlefield</a></li>  
+            <li><a href="./podcast/index.html">PodCast - DeNilo</a></li>     
 
         </ol>
         <ul>
