--- a/cafeteria/index.html
+++ b/cafeteria/index.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bar Java - Menu</title>
 </head>
-<body>
+<body bgcolor="#ffe9d2">
     <header>
         <h1>Bar Java</h1>
-        <img src="../java 2.avif" alt="Logo" height="20%" width="20%">
+        <img src="./assets/java 2.avif" alt="Logo" height="20%" width="20%">
     </header>
     
     <nav>
