correção de bugs

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -20,7 +20,7 @@
           <h1>
             <img
               style="width: 500px; margin: -170px 0"
-              src="./img/logoDeniloPodcastSemFundo.png"
+              src="./assets/logoDeniloPodcastSemFundo.png"
               alt="Logo DeNilo Poscast"
             />
           </h1>
@@ -82,12 +82,12 @@
         >
           <h3>🔊 Parte 1</h3>
           <audio controls>
-            <source src="./audio/part1.mp3" type="audio/mpeg" />
+            <source src="./assets/part1.mp3" type="audio/mpeg" />
             Verfique se o navegador suporta audio.
           </audio>
           <h3>🔊 Parte 2</h3>
           <audio controls>
-            <source src="./audio/part2.mp3" type="audio/mpeg" />
+            <source src="./assets/part2.mp3" type="audio/mpeg" />
             Verfique se o navegador suporta audio.
           </audio>
         </td>
