--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 <body>
     <header>
         <h1>Meu Portfólio</h1>
-        <img src="assets/astronaut-space-4k-wallpaper-uhdpaper.com-678@0@j.jpg" height="20%" width="20%">
+        <img src="assets/bike edit.jpeg" height="20%" width="20%">
     </header>
     
     <nav>
         <ol>
-            <li><a href="./cafeteria/index.html">Bar Java - Cafeteria</a></li>
-            <li><a href="./battlefield-table/index.html">Site Battlefield</a></li>  
-            <li><a href="./podcast/index.html">PodCast - DeNilo</a></li>     
+            <li><a href="./cafeteria/index.html">Bar Java - Cafeteria</li>
+            <li><a href="./battlefield-table/index.html">Site Battlefield</li>  
+            <li><a href="./podcast/index.html">PodCast - DeNilo</li>     
+            <li><a href="blog/index.html">Blog</li>
+            <li><a href="card/index.html">CARD</li>
 
         </ol>
         <ul>
