--- a/card/index.html
+++ b/card/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <div class="card">
-      <h1>textos</h1>
+      <h1>Nicollas</h1>
       <p>textinhos</p>
+      <div class="links">
+        <a href="https://github.com" target="_blank">GitHub</a>
+        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+      </div>
     </div>
   </body>
 </html>
