--- a/card/index.html
+++ b/card/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="card">
+      <img src="assets/foto.jfif" />
       <h1>Nicollas</h1>
       <p>textinhos</p>
       <div class="links">
