Correções pagina inicial, card

--- a/card/index.html
+++ b/card/index.html
@@ -9,11 +9,16 @@
   <body>
     <div class="card">
       <img src="assets/foto.jfif" />
-      <h1>Nicollas</h1>
-      <p>textinhos</p>
+      <h1>Nicollas Richard</h1>
+      <p>Alpar Rocket - Fatec-JD - FrontEnd</p>
+      <span>Follow me!</span>
       <div class="links">
-        <a href="https://github.com" target="_blank">GitHub</a>
-        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+        <a href="https://github.com/Voyager83" target="_blank">GitHub</a>
+        <a
+          href="https://www.linkedin.com/in/nicollas-deluca-148643110/"
+          target="_blank"
+          >LinkedIn</a
+        >
       </div>
     </div>
   </body>
