--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfólio Nicollas</title>
+    <link rel="stylesheet" href="assets/home.css" />
 </head>
 <body>
+    
     <header>
-        <h1>Meu Portfólio</h1>
         <img src="assets/bike edit.jpeg" height="20%" width="20%">
+        <h1>Nicollas Richard </h1>
     </header>
     
     <nav>
