updates pagina home

--- a/index.html
+++ b/index.html
@@ -12,19 +12,14 @@
     </header>
     
     <nav>
-        <ol>
-            <li><a href="./cafeteria/index.html">Bar Java - Cafeteria</li>
-            <li><a href="./battlefield-table/index.html">Site Battlefield</li>  
-            <li><a href="./podcast/index.html">PodCast - DeNilo</li>     
-            <li><a href="blog/index.html">Blog</li>
-            <li><a href="card/index.html">CARD</li>
-
-        </ol>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank">Meu LinkedIn</a></li>
-        </ul>
+        <a href="./cafeteria/index.html">Bar Java - Cafeteria</a>
+        <a href="./battlefield-table/index.html">Site Battlefield</a>  
+        <a href="./podcast/index.html">PodCast - DeNilo</a>
+        <a href="blog/index.html">Blog</a>
+        <a href="card/index.html">CARD</a> 
+        <a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank">Meu LinkedIn</a>    
     </nav>
-        <section>
+    <section>
         <h2>Sobre Mim</h2>
         <p>Sou graduando em Análise e Desenvolvimento de sistemas pela Fatec Jundiái, Tecnico em Química e Técnico em Desenvolvimento de Sistemas pela ETEC.</br>
 
@@ -52,8 +47,8 @@
 
         <label>Seu nome:
             <input type="text" placeholder="Digite seu nome"></br> 
-    
-            <label>E-Mail:
+        </label>
+        <label>E-Mail:
             <input type="email" placeholder="abc@email.com"></br>
         </label>
 
