aplicando correções na empresa-table 1/3

--- a/battlefield-table/index.html
+++ b/battlefield-table/index.html
@@ -3,46 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Battlefield 3</title>
+    <title>Battlefield Flight Simulator</title>
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
 
   <body>
-    <table style="background-color: rgb(72, 224, 224)" width="100%">
-      <thead>
-        <tr>
-          <th align="center"><h1>Battlefield</h1></th>
-        </tr>
-      </thead>
-    </table>
+    <header>
+      <h1>Battlefield - Flight Simulator</h1>
+      <nav>
+        <ul>
+          <li><a href="../index.html">voltar ao portifólio</a></li>
+          <li>
+            <a
+              href="https://www.ea.com/pt-br/games/battlefield/battlefield-3"
+              target="_blank"
+              >Jogos</a
+            >
+          </li>
+          <li>
+            <a href="https://www.ea.com/pt-br/news" target="_blank">Notícias</a>
+          </li>
+          <li>
+            <a href="https://steamcommunity.com/app/1238820" target="_blank"
+              >Comunidade</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-    <table border="1" width="100%">
-      <thead>
-        <th><a href="../index.html">voltar ao portifólio</a></th>
-        <th>
-          <a href="https://www.ea.com/pt-br/games/battlefield/battlefield-3"
-            >Jogos</a
-          >
-        </th>
-        <th>
-          <a href="https://www.ea.com/pt-br/news">Notícias</a>
-        </th>
-        <th>
-          <a href="https://steamcommunity.com/app/1238820">Comunidade</a>
-        </th>
-      </thead>
-
-      <td colspan="4">
-        <img src="./assets/bf3.jpg" height="30%" width="100%" />
-        <h2>Bem-vindo ao Battlefield 3</h2>
-      </td>
-    </table>
+    <div class="banner">
+      <h1>Welcome - Flight</h1>
+    </div>
 
     <section>
-      <h2>Sobre o Jogo</h2>
+      <h2>Sobre a empresa</h2>
       <p>
-        Battlefield 3 é FPS e que da um coro em qualquer jogo atual. Possui bons
-        gráficos para época, jogabilidade realista e uma vasta gama de modos de
-        jogo, BF3 é um dos melhores jogos de guerra ja feitos.
+        Battlefield Flight Simulator é uma empresa desenvolvedora de simuladores
+        de voo e aeronaves militar, filial de empresa multinacional líder do
+        segmento de simuladores
       </p>
 
       <h2>Características</h2>
@@ -52,37 +51,12 @@
         - Diversos modos de jogo e mapas<br />
         - Personalização de armas e veículos
       </p>
-
-      <h2>Participe da Comunidade</h2>
-      <p>
-        Junte-se a milhões de jogadores em todo o mundo e participe de batalhas
-        épicas. Conecte-se com amigos e experimente a emoção do campo de
-        batalha!
-      </p>
     </section>
 
     <section>
       <h3>Requisitos de Sistema</h3>
 
       <h4>Requisitos mínimos para Windows</h4>
-      <table border="2">
-        <thead>
-          <th><b>SO</b></th>
-          <th><b>Processador</b></th>
-          <th><b>Memória</b></th>
-          <th><b>Armazenamento</b></th>
-          <th><b>Placa de vídeo (AMD)</b></th>
-          <th><b>Placa de vídeo (NVIDIA)</b></th>
-        </thead>
-        <tbody>
-          <td>Windows Vista SP1 32 bits</td>
-          <td>2 GHz Dual Core (Core 2 Duo 2,4 GHz ou Althon X2 2,7 GHz)</td>
-          <td>2GB DDR3</td>
-          <td>20 GB</td>
-          <td>ATI Radeon séries 3000</td>
-          <td>GeForce séries 8</td>
-        </tbody>
-      </table>
 
       <h4>Requisitos recomendados para Windows</h4>
 
