correções flight simulator pt 2/3

--- a/battlefield-table/index.html
+++ b/battlefield-table/index.html
@@ -37,7 +37,14 @@
     </div>
 
     <section>
-      <h2>Sobre a empresa</h2>
+      <div class="grid"></div>
+      <div class="grid"></div>
+      <div class="grid"></div>
+      <div class="grid"></div>
+      <div class="grid"></div>
+      <div class="grid"></div>
+
+      <!-- <h2>Sobre a empresa</h2>
       <p>
         Battlefield Flight Simulator é uma empresa desenvolvedora de simuladores
         de voo e aeronaves militar, filial de empresa multinacional líder do
@@ -50,10 +57,10 @@
         - Gráficos de última geração(ou quase..rs)<br />
         - Diversos modos de jogo e mapas<br />
         - Personalização de armas e veículos
-      </p>
+      </p> -->
     </section>
 
-    <section>
+    <!-- <section>
       <h3>Requisitos de Sistema</h3>
 
       <h4>Requisitos mínimos para Windows</h4>
@@ -78,7 +85,7 @@
           <td>GeForce GTX 560</td>
         </tbody>
       </table>
-    </section>
+    </section> -->
 
     <footer>
       <p>&copy; 2025₢ Battlefield.</p>
