Recriação do podcast, estrutura, css, 1/2

--- a/battlefield-table/index.html
+++ b/battlefield-table/index.html
@@ -37,12 +37,14 @@
     </div>
 
     <section>
-      <div class="grid"></div>
-      <div class="grid"></div>
-      <div class="grid"></div>
-      <div class="grid"></div>
-      <div class="grid"></div>
-      <div class="grid"></div>
+      <div class="grid">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
 
       <!-- <h2>Sobre a empresa</h2>
       <p>
