--- a/podcast/index.html
+++ b/podcast/index.html
@@ -1,107 +1,69 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DeNilo - Podcast</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body
-    style="background-color: #505050; color: whitesmoke; font-family: 'Ravie'"
-  >
-    <nav style="width: 65px; background-color: rgb(81, 255, 0)">
-      <a href="../index.html">Voltar - Portifólio</a>
-    </nav>
-    <table border="0" cellspacing="0" width="100%">
-      <tr style="background-color: #070c31">
-        <!-- <td style="width: 150px">
-          <img src="./img/logoDeniloPodcast.jpg" height="150px" width="150px" />
-        </td> -->
-        <td align="center">
-          <h1>
-            <img
-              style="width: 500px; margin: -170px 0"
-              src="./assets/logoDeniloPodcastSemFundo.png"
-              alt="Logo DeNilo Poscast"
-            />
-          </h1>
-          <p>Bem-vindo ao DeNilo, seu podcast sobre tecnologia!</p>
-        </td>
-      </tr>
+  <body>
+    <nav>b</nav>
 
-      <tr>
-        <!-- <td rowspan="0" style="background-color: rgb(21, 21, 21)"></td> -->
-        <td
-          align="center"
-          style="
-            background: rgb(80, 80, 80);
-            background: linear-gradient(
-              0deg,
-              rgba(80, 80, 80, 1) 80%,
-              rgba(7, 12, 49, 1) 100%
-            );
-          "
-        >
-          <h2>
-            Confira nosso episódio:<br />
-            #001 - Treinamento de IA: LLM
-          </h2>
-          <p>Vídeo de resumo sobre a LLM:</p>
-          <iframe
-            width="100%"
-            height="800px"
-            src="https://www.youtube.com/embed/LPZh9BOjkQs"
-            title="Large Language Models explained briefly"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          >
-          </iframe>
-        </td>
-      </tr>
+    <header>
+      <img src="assets/img/logoDeniloPodcast.jpg" alt="Logo DeNilo" />
+      <div class="title">
+        <span>PodCast</span>
+        <h1>DeNilo</h1>
+        <p>Bem Vindo ao DeNilo, Seu podcast de tecnologia</p>
+      </div>
+    </header>
 
-      <tr>
-        <td align="center" style="background: rgb(21, 21, 21)">
-          <h2>🎧 Ouça o Podcast</h2>
-          <p>Acompanhe o episódio completo em áudio:</p>
-        </td>
-      </tr>
+    <main>
+      <h2>Ouça o PodCast</h2>
+      <section class="episodios">
+        <div class="ep">
+          <img src="assets/img/LLM.jpg" alt="Imagem ep1" width="250px" />
+          <div class="descricoes">
+            <h3>#001 - Treinamento de IA: LLM</h3>
+            <p>Vídeo, áudio • DeNilo Podcast</p>
+            <span
+              >Neste episódio, falaremos um pouco sobre a LLM, o vídeo apresenta
+              ao público como ela funciona por baixo dos panos, desde sua
+              estrutura até como é abastecida. Ao decorrer da conversa,
+              abordaremos situações práticas muito rentáveis, junto do suspense
+              que temos na área de tecnologia: IA roubará nosso emprego?</span
+            >
+          </div>
+        </div>
 
-      <tr>
-        <!-- <td align="center"></td> -->
-        <td
-          style="
-            background: rgb(7, 12, 49);
-            background: linear-gradient(
-              0deg,
-              rgba(7, 12, 49, 1) 0%,
-              rgba(21, 21, 21, 1) 100%
-            );
-          "
-          align="center"
-        >
-          <h3>🔊 Parte 1</h3>
-          <audio controls>
-            <source src="./assets/part1.mp3" type="audio/mpeg" />
-            Verfique se o navegador suporta audio.
-          </audio>
-          <h3>🔊 Parte 2</h3>
-          <audio controls>
-            <source src="./assets/part2.mp3" type="audio/mpeg" />
-            Verfique se o navegador suporta audio.
-          </audio>
-        </td>
-      </tr>
-
-      <tr>
-        <td style="background-color: #070c31" align="center">
-          <p>© 2025 DeNilo Podcast - thanks for watching</p>
-          <span
-            >Desenvolvedores: Danilo Sena dos Santos & Nicollas Richard Deluca
-            Maia</span
-          >
-        </td>
-      </tr>
-    </table>
+        <div class="ep">
+          <img src="assets/img/LLM.jpg" alt="Imagem ep1" width="250px" />
+          <div class="descricoes">
+            <h3>#001 - Treinamento de IA: LLM</h3>
+            <p>Vídeo, áudio • DeNilo Podcast</p>
+            <span
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur ad magni dolore odio repudiandae! Veritatis nihil quod
+              velit mollitia porro saepe asperiores, est laboriosam! Voluptate
+              et facilis ipsum voluptates repellat!</span
+            >
+          </div>
+        </div>
+        <div class="ep">
+          <img src="assets/img/LLM.jpg" alt="Imagem ep1" width="250px" />
+          <div class="descricoes">
+            <h3>#001 - Treinamento de IA: LLM</h3>
+            <p>Vídeo, áudio • DeNilo Podcast</p>
+            <span
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+              molestias autem iure vitae dicta suscipit obcaecati cupiditate
+              reprehenderit fugit doloribus quia aliquam odio excepturi, eius
+              omnis assumenda in quaerat atque?</span
+            >
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>d</footer>
   </body>
 </html>
