acrescimos no podcast, correções de font, icones, display

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DeNilo - Podcast</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=smart_display"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <nav>b</nav>
 
     <header>
-      <img src="assets/img/logoDeniloPodcast.jpg" alt="Logo DeNilo" />
+      <img src="assets/img/DeNilo editada.jpg" alt="Logo DeNilo" />
       <div class="title">
         <span>PodCast</span>
         <h1>DeNilo</h1>
@@ -22,43 +26,44 @@
       <h2>Ouça o PodCast</h2>
       <section class="episodios">
         <div class="ep">
-          <img src="assets/img/LLM.jpg" alt="Imagem ep1" width="250px" />
+          <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
           <div class="descricoes">
-            <h3>#001 - Treinamento de IA: LLM</h3>
-            <p>Vídeo, áudio • DeNilo Podcast</p>
+            <h3>#001 - TREINAMENTO DE IA: LLM</h3>
+            <div class="icon-text">
+              <span class="material-symbols-outlined"> smart_display </span>
+              <p>Vídeo, áudio • DeNilo Podcast</p>
+            </div>
             <span
-              >Neste episódio, falaremos um pouco sobre a LLM, o vídeo apresenta
-              ao público como ela funciona por baixo dos panos, desde sua
-              estrutura até como é abastecida. Ao decorrer da conversa,
-              abordaremos situações práticas muito rentáveis, junto do suspense
-              que temos na área de tecnologia: IA roubará nosso emprego?</span
-            >
-          </div>
-        </div>
-
-        <div class="ep">
-          <img src="assets/img/LLM.jpg" alt="Imagem ep1" width="250px" />
-          <div class="descricoes">
-            <h3>#001 - Treinamento de IA: LLM</h3>
-            <p>Vídeo, áudio • DeNilo Podcast</p>
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur ad magni dolore odio repudiandae! Veritatis nihil quod
-              velit mollitia porro saepe asperiores, est laboriosam! Voluptate
-              et facilis ipsum voluptates repellat!</span
+              >Neste episódio abordaremos situações práticas muito rentáveis no
+              uso de IAs e como isso afeta nossos empregos</span
             >
           </div>
         </div>
         <div class="ep">
-          <img src="assets/img/LLM.jpg" alt="Imagem ep1" width="250px" />
+          <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
           <div class="descricoes">
-            <h3>#001 - Treinamento de IA: LLM</h3>
-            <p>Vídeo, áudio • DeNilo Podcast</p>
+            <h3>#001 - TREINAMENTO DE IA: LLM</h3>
+            <div class="icon-text">
+              <span class="material-symbols-outlined"> smart_display </span>
+              <p>Vídeo, áudio • DeNilo Podcast</p>
+            </div>
             <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-              molestias autem iure vitae dicta suscipit obcaecati cupiditate
-              reprehenderit fugit doloribus quia aliquam odio excepturi, eius
-              omnis assumenda in quaerat atque?</span
+              >Neste episódio abordaremos situações práticas muito rentáveis no
+              uso de IAs e como isso afeta nossos empregos</span
+            >
+          </div>
+        </div>
+        <div class="ep">
+          <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
+          <div class="descricoes">
+            <h3>#001 - TREINAMENTO DE IA: LLM</h3>
+            <div class="icon-text">
+              <span class="material-symbols-outlined"> smart_display </span>
+              <p>Vídeo, áudio • DeNilo Podcast</p>
+            </div>
+            <span
+              >Neste episódio abordaremos situações práticas muito rentáveis no
+              uso de IAs e como isso afeta nossos empregos</span
             >
           </div>
         </div>
