Correção de divs, box-shadows, button, padding, fonts, gap

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -11,19 +11,35 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <nav>b</nav>
+    <nav></nav>
 
+    <!--           =================================
+    ============ CABECALHO - LOGO - TÍTULO  ===================
+            ================================== -->
     <header>
       <img src="assets/img/DeNilo editada.jpg" alt="Logo DeNilo" />
       <div class="title">
-        <span>PodCast</span>
+        <span>Podcast</span>
         <h1>DeNilo</h1>
         <p>Bem Vindo ao DeNilo, Seu podcast de tecnologia</p>
       </div>
     </header>
 
+    <!--         =================================
+    ============ EPS - LISTAS - DESCRIÇÕES  ===================
+            ================================== -->
+
     <main>
-      <h2>Ouça o PodCast</h2>
+      <div class="nav-eps">
+        <div class="join-mais">
+          <button>Inscrever-se</button>
+          <img
+            src="assets/img/more_horiz_24dp_EFEFEF_FILL0_wght400_GRAD0_opsz24.svg"
+          />
+        </div>
+        <h3>Sobre</h3>
+      </div>
+
       <section class="episodios">
         <div class="ep">
           <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
@@ -31,39 +47,49 @@
             <h3>#001 - TREINAMENTO DE IA: LLM</h3>
             <div class="icon-text">
               <span class="material-symbols-outlined"> smart_display </span>
-              <p>Vídeo, áudio • DeNilo Podcast</p>
+              <b><p>Vídeo, áudio • DeNilo Podcast</p></b>
             </div>
-            <span
-              >Neste episódio abordaremos situações práticas muito rentáveis no
-              uso de IAs e como isso afeta nossos empregos</span
+            <b
+              ><span class="resumo"
+                >Neste episódio abordaremos situações práticas muito rentáveis
+                no uso de IAs e como isso afeta nossos empregos.</span
+              >
+              <span class="data">Hoje • 0h17m</span></b
             >
           </div>
         </div>
+
         <div class="ep">
           <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
           <div class="descricoes">
-            <h3>#001 - TREINAMENTO DE IA: LLM</h3>
+            <h3>#002 - PROGRAMA ALPAR ROCKET</h3>
             <div class="icon-text">
               <span class="material-symbols-outlined"> smart_display </span>
-              <p>Vídeo, áudio • DeNilo Podcast</p>
+              <b><p>Vídeo, áudio • DeNilo Podcast</p></b>
             </div>
-            <span
-              >Neste episódio abordaremos situações práticas muito rentáveis no
-              uso de IAs e como isso afeta nossos empregos</span
+            <b
+              ><span class="resumo"
+                >Muita aventura e desfaios com os novos participantes do alpar
+                rocket program.</span
+              >
+              <span class="data">Em breve • 1h15m</span></b
             >
           </div>
         </div>
+
         <div class="ep">
           <img src="assets/img/LLM.jpg" alt="Imagem ep1" />
           <div class="descricoes">
-            <h3>#001 - TREINAMENTO DE IA: LLM</h3>
+            <h3>#003 - ACADÊMIA DE LÍDERES</h3>
             <div class="icon-text">
               <span class="material-symbols-outlined"> smart_display </span>
-              <p>Vídeo, áudio • DeNilo Podcast</p>
+              <b><p>Vídeo, áudio • DeNilo Podcast</p></b>
             </div>
-            <span
-              >Neste episódio abordaremos situações práticas muito rentáveis no
-              uso de IAs e como isso afeta nossos empregos</span
+            <b
+              ><span class="resumo"
+                >Ensinamentos sobre formação e gestão de profissionais.</span
+              >
+              <span class="data">Em breve • 1h15m</span></b
             >
           </div>
         </div>
