corujao: add banner, correções de layput, add buttons nav

--- a/podcast/index.html
+++ b/podcast/index.html
@@ -38,6 +38,14 @@
           />
         </div>
         <h3>Sobre</h3>
+        <span
+          >Descubra novos prazeres, conversamos sobre Ciencia e Tecnologia</span
+        >
+        <div class="botoes-tag">
+          <button>4,9 * (15,6mil)</button> •
+          <button>Tecnologia</button>
+          <button>Cultura</button>
+        </div>
       </div>
 
       <section class="episodios">
