--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <a href="./podcast/index.html">PodCast - DeNilo</a>
         <a href="blog/index.html">Blog</a>
         <a href="card/index.html">CARD</a> 
-        <a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank">Meu LinkedIn</a>    
+        <a href="baralho/index.html">Baralho</a>
+        <a href="https://www.linkedin.com/in/nicollas-deluca-148643110/" target="_blank">Meu LinkedIn</a>
+
     </nav>
     <section>
         <h2>Sobre Mim</h2>
