correções no filp

--- a/baralho/index.html
+++ b/baralho/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="card">oinn</div>
+    <div class="card">
+      <div class="front-card">
+        <div class="naipe-cima">
+          <span>1</span>
+        </div>
+        <div class="naipe-baixo">
+          <span>1</span>
+        </div>
+      </div>
+
+      <!-- parte de trás -->
+      <div class="back-card">
+        <span>1</span>
+      </div>
+    </div>
   </body>
 </html>
