--- a/baralho/index.html
+++ b/baralho/index.html
@@ -9,17 +9,29 @@
   <body>
     <div class="card">
       <div class="front-card">
+        <img src="assets/img/valete-coringa2.jpg" />
+        <!-- linha 1 - superior -->
         <div class="naipe-cima">
-          <span>1</span>
+          <span>J</span>
+          <img src="assets/img/clubs.png" />
         </div>
+
+        <!-- linha 2 - parte central, imagem principal -->
+        <div class="naipe-centro">
+          <img src="assets/img/clubs.png" />
+        </div>
+
+        <!-- linha 3 - inferior -->
+
         <div class="naipe-baixo">
-          <span>1</span>
+          <span>J</span>
+          <img src="assets/img/clubs.png" />
         </div>
       </div>
 
       <!-- parte de trás -->
       <div class="back-card">
-        <span>1</span>
+        <span></span>
       </div>
     </div>
   </body>
