ajustes de cores, img krita, maipe

--- a/baralho/index.html
+++ b/baralho/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="card">
       <div class="front-card">
-        <img src="assets/img/valete-coringa2.jpg" />
+        <img class="jkr" src="assets/img/valete-coringa2.jpg" />
         <!-- linha 1 - superior -->
         <div class="naipe-cima">
           <span>J</span>
@@ -17,9 +17,7 @@
         </div>
 
         <!-- linha 2 - parte central, imagem principal -->
-        <div class="naipe-centro">
-          <img src="assets/img/clubs.png" />
-        </div>
+        <div class="naipe-centro"></div>
 
         <!-- linha 3 - inferior -->
 
