bordas e sombreamentos acrescidas, sites  e apps de referencia: krita, css gradient,css matic, text shadows generator

--- a/baralho/index.html
+++ b/baralho/index.html
@@ -13,7 +13,7 @@
         <!-- linha 1 - superior -->
         <div class="naipe-cima">
           <span>J</span>
-          <img src="assets/img/clubs.png" />
+          <img src="assets/img/clubs-jkr.png" />
         </div>
 
         <!-- linha 2 - parte central, imagem principal -->
@@ -23,7 +23,7 @@
 
         <div class="naipe-baixo">
           <span>J</span>
-          <img src="assets/img/clubs.png" />
+          <img src="assets/img/clubs-jkr.png" />
         </div>
       </div>
 
