ajuste na pagina portifolio, encremento do banner

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     
     <nav>
+        <a href="index-temp-home.html"> HOME v2.0</a>
         <a href="./cafeteria/index.html" id="nav1">Bar Java - Cafeteria</a>
         <a href="./battlefield-table/index.html" id="nav2">Site Battlefield</a>  
         <a href="./podcast/index.html" id="nav3">PodCast - DeNilo</a>
