ajustando layouts para grid

--- a/index-temp-home.html
+++ b/index-temp-home.html
@@ -9,8 +9,24 @@
   <body>
     <section>
       <div class="banner-left"></div>
-      <img src="assets/img/bike edit.jpeg" class="profile-image" />
-      <div class="banner-right"></div>
+
+      <div class="middle">
+        <img src="assets/img/bike edit.jpeg" class="profile-image" />
+      </div>
+      <div class="banner-right">
+        <div class="about-me">
+          <h3>Developer</h3>
+          <h1>Nicollas Richard</h1>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+            nesciunt beatae impedit nihil voluptates earum voluptate quis
+            excepturi reprehenderit! Deleniti illo consequatur non nam, vero
+            doloremque ex amet quas est.</span
+          >
+        </div>
+      </div>
     </section>
+
+    <section></section>
   </body>
 </html>
